Modified the mdi. It is the parent window and the starter form. All other child form are opened from there. More UI/UX design changes are coming

--- a/Municipal Services Application for South Africa.csproj
+++ b/Municipal Services Application for South Africa.csproj
@@ -104,6 +104,12 @@
     <Compile Include="SavingEventsandAnnoucement.Designer.cs">
       <DependentUpon>SavingEventsandAnnoucement.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServiceReqStatusForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServiceReqStatusForm.Designer.cs">
+      <DependentUpon>ServiceReqStatusForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LocalEventsAndAnnouncements.resx">
       <DependentUpon>LocalEventsAndAnnouncements.cs</DependentUpon>
     </EmbeddedResource>
