--- a/Municipal Services Application for South Africa.csproj
+++ b/Municipal Services Application for South Africa.csproj
@@ -92,6 +92,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedBlackTree.cs" />
+    <Compile Include="RedBlackNode.cs" />
     <Compile Include="ReportIssuesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +112,7 @@
     <Compile Include="ServiceReqStatusForm.Designer.cs">
       <DependentUpon>ServiceReqStatusForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServiceRequest.cs" />
     <EmbeddedResource Include="LocalEventsAndAnnouncements.resx">
       <DependentUpon>LocalEventsAndAnnouncements.cs</DependentUpon>
     </EmbeddedResource>
